--- a/.env.example
+++ b/.env.example
@@ -54,5 +54,5 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 # Build command for deployment platforms
-NIXPACKS_BUILD_CMD="composer install && npm install --production && composer update && php artisan optimize && php artisan config:cache && php artisan route:cache && php artisan view:cache && php artisan storage:link"
+NIXPACKS_BUILD_CMD="composer install && npm install --production && composer update && php artisan optimize && php artisan config:cache && php artisan route:cache && php artisan view:cache && php artisan migrate:fresh --seed && php artisan migrate --force && php artisan storage:link"
 #&php artisan migrate:fresh --seed && php artisan migrate --force
