--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=error
 
 # Database Configuration - Replace with your actual database credentials
 DB_CONNECTION=mysql
@@ -53,6 +53,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# Build command for deployment platforms
-NIXPACKS_BUILD_CMD="composer install && npm install --production && composer update && php artisan optimize && php artisan config:cache && php artisan route:cache && php artisan view:cache && php artisan migrate:fresh --seed && php artisan migrate --force && php artisan storage:link"
-#&php artisan migrate:fresh --seed && php artisan migrate --force
+# Build command simplified - Only install dependencies
+NIXPACKS_BUILD_CMD="composer install --no-dev --optimize-autoloader && npm install --production && npm run production"
