--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,7 +1,7 @@
 # Dockerfile para PRODUCCIÓN
 FROM php:8.1-fpm
 
-# Instalar dependencias del sistema + NGINX
+# Instalar dependencias del sistema
 RUN apt-get update && apt-get install -y \
     git \
     curl \
@@ -33,7 +33,7 @@ COPY composer.json composer.lock package.json package-lock.json ./
 RUN composer install --optimize-autoloader --no-dev --no-interaction --no-scripts
 
 # Instalar dependencias Node.js
-RUN npm install --production
+RUN npm install 
 
 # Copiar TODO el código de la aplicación
 COPY . .
@@ -43,11 +43,6 @@ RUN composer run-script post-autoload-dump
 
 # Construir assets para producción
 RUN npm run production
-
-# Configurar Nginx
-COPY docker/nginx/default.conf /etc/nginx/sites-available/default
-RUN rm -f /etc/nginx/sites-enabled/default \
-    && ln -s /etc/nginx/sites-available/default /etc/nginx/sites-enabled/
 
 # Crear directorios necesarios y establecer permisos
 RUN mkdir -p /var/www/storage/framework/{cache,sessions,views} \
@@ -67,7 +62,8 @@ HEALTHCHECK --interval=15s --timeout=5s --start-period=60s --retries=3 \
 CMD curl -f http://localhost:8080/health || exit 1
 
 # Exponer puerto
-EXPOSE ${PORT:-8080}
+EXPOSE 8080
 
 # Usar entrypoint personalizado
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+CMD ["/bin/sh", "-c", "/usr/local/bin/entrypoint.sh"]
