--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -16,6 +16,7 @@ RUN apt-get update && apt-get install -y \
     netcat-openbsd \
     nginx \
     supervisor \
+    gettext-base\
     && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
